2014-03-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-make-group): Clarify prompt.

2014-02-22  Daniel Colascione  <dancol@dancol.org>

	* auth-source.el (auth-source-secrets-listify-pattern): New function.
	(auth-source-secrets-search): Don't pass invalid patterns to secrets.el;
	instead, build list of patterns.

2014-02-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources): Add pointer to what the .gpg extension
	in `auth-sources' means and link to EPA docs.

2014-02-12  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expand-newtext): Further sub-match fixups
	(bug#12375).

2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-tab): Mention what happens on normal tabs
	(bug#11297).

2014-02-08  Glenn Morris  <rgm@gnu.org>

	* auth-source.el (auth-sources): Doc fix.  (Bug#16642)

2014-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* ietf-drums.el (ietf-drums-parse-address): Don't bug out when called
	with an empty string.

2014-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-cancel-article): `user-mail-address' is
	buffer-local in some buffers, so bind it explicitly in the buffer we're
	trying to cancel the article in (bug#10808).

2014-02-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-request-accept-article): Doc fix.

2014-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnir.el (nnir-request-update-mark): Don't try to update the source
	group if we can't find it (bug#16611).

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-transform-headers): Fix Davmail header parsing.

2014-01-31  Dave Abrahams  <dave@boostpro.com>

	* gnus-salt.el (gnus-tree-highlight-article): Don't move point around
	in the summary buffer (bug#13769).

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-setup-buffer): Refresh the summary buffer
	name if we're using a single article buffer.  Otherwise, it may point