@@ -1,3 +1,8 @@
+2014-03-07  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-agent.el (gnus-agent-update-files-total-fetched-for): Don't bug
+	out if the directory doesn't exist.
+
 2014-03-05  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-group.el (gnus-group-make-group): Clarify prompt.
